--- a/app.css
+++ b/app.css
@@ -1,7 +1,14 @@
-﻿body {
-    font-family: 'Segoe UI', sans-serif;
+﻿
+
+body{
+	font-family: 'biro_script_reducedregular';
 }
 
-span {
-    font-style: italic;
+@font-face {
+    font-family: 'biro_script_reducedregular';
+    src: url('biro_script_reduced-webfont.woff2') format('woff2'),
+         url('biro_script_reduced-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
